task: upload data / computer transfer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
 <div class="container">
   <header></header>
-  <div class="summary"></div>
+  <div class="summary">
+    <app-table-view></app-table-view>
+  </div>
   <div class="charts"></div>
   <footer></footer>
 </div>
