feat: Pie chart added
- updated data service
- dynamic pie chart rendering

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,10 @@
 <div class="container">
   <header></header>
   <div class="summary">
-    <app-table-view></app-table-view>
   </div>
-  <div class="charts"></div>
+  <div class="charts">
+    <app-pie-chart></app-pie-chart>
+  </div>
   <footer></footer>
 </div>
+
