--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
-
-<div class="container">
-  <header></header>
-  <div class="summary">
-  </div>
-  <div class="charts">
-    <app-pie-chart></app-pie-chart>
-  </div>
-  <footer></footer>
+<!--<div class="container">-->
+<!--  <header></header>-->
+<!--  <div class="summary">-->
+<!--  </div>-->
+<div class="charts">
+  <app-pie-chart></app-pie-chart>
+  <app-line-chart></app-line-chart>
 </div>
+<!--  <footer></footer>-->
+<!--</div>-->
+
 
