--- a/src/app/data-viewer/pie-chart/pie-chart.component.css
+++ b/src/app/data-viewer/pie-chart/pie-chart.component.css
@@ -1,11 +1,21 @@
 #pieChart {
   display: block;
-  width: 400px;
-  height:400px;
-  border-color: black;
 }
 
-button {
-  height: 5rem;
-  width: 5rem;
+mat-card {
+  width: 30vw;
+  display: inline-block;
+}
+
+mat-card-title {
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.pie-controls {
+  margin-top: 1rem;
+}
+
+mat-slider {
+  width: calc(100% - 120px);
 }
