--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-<!--<div class="container">-->
-<!--  <header></header>-->
-<!--  <div class="summary">-->
-<!--  </div>-->
-<div class="charts">
-  <app-pie-chart></app-pie-chart>
-  <app-line-chart></app-line-chart>
+<div class="container">
+  <div class="charts">
+    <app-pie-chart></app-pie-chart>
+    <app-line-chart></app-line-chart>
+  </div>
+
+  <div class="controls">
+    <app-data-controller></app-data-controller>
+  </div>
 </div>
-<!--  <footer></footer>-->
-<!--</div>-->
 
 
