--- a/src/app/data-viewer/line-chart/line-chart.component.html
+++ b/src/app/data-viewer/line-chart/line-chart.component.html
@@ -1,6 +1,6 @@
 <mat-card>
 
-  <mat-card-title> Amount Spent per Day </mat-card-title>
+  <mat-card-title> Expenses Cost </mat-card-title>
 
   <div id="lineChart">
     <canvas id="lineChartCanvas"></canvas>
