--- a/src/app/data-viewer/pie-chart/pie-chart.component.css
+++ b/src/app/data-viewer/pie-chart/pie-chart.component.css
@@ -1,10 +1,19 @@
 #pieChart {
   display: block;
+  height: 90%;
+}
+
+#pieChartCanvas {
+  max-height: 300px;
+
 }
 
 mat-card {
   width: 30vw;
-  display: inline-block;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 mat-card-title {
@@ -17,5 +26,5 @@ mat-card-title {
 }
 
 mat-slider {
-  width: calc(100% - 120px);
+  width: calc(100% - 110px);
 }
