feat: add routing, nav buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,6 @@
 <div class="container">
-  <div class="charts">
-    <app-pie-chart></app-pie-chart>
-    <app-line-chart></app-line-chart>
-  </div>
-
-  <div class="controls">
-    <app-data-controller></app-data-controller>
-  </div>
+  <app-data-controller></app-data-controller>
+  <router-outlet></router-outlet>
 </div>
 
 
