--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,12 @@
 .container {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
+  align-items: center;
 }
 
-.charts {
-  display: flex;
-  justify-content: space-around;
+app-date-view-route {
+  width: 100vw;
 }
-
 .controls {
   height: auto;
-  padding: 1rem;
 }
