feat: table view added
- all data visible thanks to hack in data service

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,9 +4,7 @@
   align-items: center;
 }
 
-app-date-view-route {
+router-outlet {
   width: 100vw;
-}
-.controls {
-  height: auto;
+  padding: 1rem;
 }
