--- a/src/app/data-viewer/table-view/table-view.component.html
+++ b/src/app/data-viewer/table-view/table-view.component.html
@@ -1,1 +1,19 @@
-<p>table-view works!</p>
+<div class="mat-elevation-z8">
+
+  <table mat-table [dataSource]="dataSource">
+
+    <ng-container *ngFor="let col of displayedColumns" matColumnDef={{col}}>
+      <th mat-header-cell *matHeaderCellDef>{{col}}</th>
+      <td mat-cell *matCellDef="let element"> {{element[col]}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10]"
+                 showFirstLastButtons
+                 aria-label="Select page of expense data">
+  </mat-paginator>
+
+</div>
