fix: adjust chart scaling styles
- add cumulative data back to chart and fix map method
- toggle / untoggle 2 sets of data on line chart

--- a/src/app/data-viewer/line-chart/line-chart.component.css
+++ b/src/app/data-viewer/line-chart/line-chart.component.css
@@ -1,6 +1,11 @@
 #lineChart {
   display: block;
-  height: 90%;
+  height: 95%;
+  margin: 1rem;
+}
+
+#lineChartCanvas {
+  max-height: 75vh;
 }
 
 mat-card-title {
@@ -10,7 +15,7 @@ mat-card-title {
 mat-card {
   width: 60vw;
   display: inline-block;
-  height: 400px;
+  height: 60vh;
 }
 
 
