--- a/src/app/data-viewer/pie-chart/pie-chart.component.css
+++ b/src/app/data-viewer/pie-chart/pie-chart.component.css
@@ -4,12 +4,12 @@
 }
 
 #pieChartCanvas {
-  max-height: 300px;
+  max-height: 50vh;
 }
 
 mat-card {
   width: 30vw;
-  height: 400px;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
