--- a/src/app/data-viewer/table-view/table-view.component.html
+++ b/src/app/data-viewer/table-view/table-view.component.html
@@ -11,7 +11,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10]"
+  <mat-paginator [pageSizeOptions]="[10, 20, 50, 250]"
                  showFirstLastButtons
                  aria-label="Select page of expense data">
   </mat-paginator>
