fix: css adjustments / clean up

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <app-data-controller></app-data-controller>
-  <router-outlet></router-outlet>
+  <div class="router">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 
 
