--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,9 +2,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
 }
 
-router-outlet {
-  width: 100vw;
-  padding: 1rem;
+app-data-controller {
+  width: 95vw;
+  margin-top: 2.5rem;
+
+  margin-bottom: 2.5rem;
+}
+
+.router {
+  width: 95vw;
 }
