--- a/src/app/data-viewer/line-chart/line-chart.component.css
+++ b/src/app/data-viewer/line-chart/line-chart.component.css
@@ -1,7 +1,6 @@
 #lineChart {
   display: block;
   height: 95%;
-  margin: 1rem;
 }
 
 #lineChartCanvas {
@@ -10,6 +9,7 @@
 
 mat-card-title {
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 mat-card {
